API - Cookies and Cookie Providers
- added endpoint `/api/v1/cookie-providers/{project}`
- added endpoint `/api/v1/cookies/{project}`
- updated OpenApi schema
- updated package `68publishers/omni`
